[package]
name = "kree"
version = "0.1.0"
authors = ["Theia Ware <theia.j.ware@gmail.com>"]
edition = "2018"

[dependencies]
x11 = { version = "*", features = ["xlib", "xinerama"] }
# xdg = "2.2"
xcb = { version = "0.8", features = ["randr"] }
xcb-util = { version = "0.2", features = ["icccm", "ewmh", "keysyms"] }
serde = "1.0"
serde_yaml = "0.8"
fork = "0.1"
dirs = "2.0.2"
clap = "2.33.0"
shell-words = "1.0.0"
regex = "1.4.2"
